--- a/app/ce-ui/package.json
+++ b/app/ce-ui/package.json
@@ -3,12 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/api": "^3.1.23",
+    "@aws-amplify/pubsub": "^3.0.24",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "aws-amplify": "^3.0.24",
+    "aws-amplify-react": "^4.1.23",
+    "aws-appsync": "^4.0.0",
+    "aws-appsync-react": "^4.0.0",
+    "axios": "^0.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "save": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
