--- a/app/ce-ui/package.json
+++ b/app/ce-ui/package.json
@@ -14,14 +14,23 @@
     "@testing-library/user-event": "^7.2.1",
     "aws-amplify": "^3.0.24",
     "aws-amplify-react": "^4.1.23",
+    "aws-amplify-react-custom-ui": "^1.2.2",
     "aws-appsync": "^4.0.0",
     "aws-appsync-react": "^4.0.0",
     "axios": "^0.20.0",
+    "lodash": "^4.17.15",
+    "match-sorter": "^4.0.2",
+    "moment": "^2.26.0",
+    "moment-timezone": "^0.5.31",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
+    "react-loader-spinner": "^3.1.14",
+    "react-moment": "^0.9.7",
     "react-scripts": "3.4.3",
-    "save": "^2.4.0"
+    "react-table": "^6.10.0",
+    "save": "^2.4.0",
+    "recharts": "^1.8.5"
   },
   "scripts": {
     "start": "react-scripts start",
