--- a/app/ce-ui/package.json
+++ b/app/ce-ui/package.json
@@ -28,6 +28,7 @@
     "react-loader-spinner": "^3.1.14",
     "react-moment": "^0.9.7",
     "react-scripts": "3.4.3",
+    "react-spinners": "^0.6.1",
     "react-table": "^6.10.0",
     "save": "^2.4.0",
     "recharts": "^1.8.5"
