--- a/app/ce-ui/package.json
+++ b/app/ce-ui/package.json
@@ -30,6 +30,7 @@
     "react-scripts": "3.4.3",
     "react-spinners": "^0.6.1",
     "react-table": "^6.10.0",
+    "react-tabs": "^3.1.1",
     "recharts": "^1.8.5",
     "save": "^2.4.0"
   },
